--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -69,8 +69,21 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
-            android:textSize="18sp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
+            tools:text="₺22.90" />
+
+        <TextView
+            android:id="@+id/tv_product_sale_price"
+            style="@style/textViewRegular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="20dp"
+            android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
             tools:text="₺22.90" />
@@ -84,6 +97,7 @@
             android:scaleType="fitCenter"
             android:src="@drawable/ic_add"
             app:fabCustomSize="48dp"
+            android:contentDescription="FAB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_product_desc"
             app:layout_constraintHorizontal_bias="1.0"
