--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -37,6 +37,7 @@
         <TextView
             android:id="@+id/tv_product_title"
             style="@style/textViewRegular"
+            android:maxLines="2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -50,7 +51,6 @@
 
         <TextView
             android:id="@+id/tv_product_desc"
-            style="@style/textViewRegular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -67,11 +67,11 @@
             style="@style/textViewRegular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_product_desc"
             app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
             tools:text="₺22.90" />
 
@@ -80,12 +80,16 @@
             style="@style/textViewRegular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:textSize="16sp"
             android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fab_add_to_cart"
+            app:layout_constraintHorizontal_bias="0.555"
+            app:layout_constraintStart_toEndOf="@+id/tv_product_price"
             app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
+            app:layout_constraintVertical_bias="0.656"
             tools:text="₺22.90" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
