--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -80,15 +80,31 @@
                 app:layout_constraintVertical_bias="0.0" />
 
 
+            <RatingBar
+                android:id="@+id/ratingbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:rating="3.56"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:progressTint="@color/yellow"
+                android:secondaryProgressTint="@color/yellow"
+                android:contentDescription="ratingbar"
+                android:stepSize="0.01"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_product_title"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/tv_product_title"
+                app:layout_constraintTop_toBottomOf="@+id/iv_product" />
+
             <TextView
                 android:id="@+id/tv_product_title"
                 style="@style/textViewRegular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_product"
+                app:layout_constraintTop_toBottomOf="@id/ratingbar"
                 tools:text="Urban Care" />
 
 
@@ -141,6 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="₺115,19"
+                    android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/btn_add_to_cart"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -152,7 +169,7 @@
                     style="@style/textViewRegular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_product_price"
                     app:layout_constraintEnd_toStartOf="@+id/btn_add_to_cart"
