--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/splashStyle">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_horizontal_one"
@@ -13,7 +14,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_splash_ellipse"
         app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_one"
@@ -29,7 +30,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_splash_ellipse_two"
         app:layout_constraintBottom_toBottomOf="parent"
