--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -20,7 +20,7 @@
 
     <item
         android:id="@+id/favoriteFragment"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/ic_fav_menu"
         android:title="Favorite"
         />
 
