cart fragment fixes

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -72,7 +72,7 @@
                 android:layout_width="150dp"
                 android:layout_height="250dp"
                 android:layout_margin="20dp"
-                android:src="@drawable/ic_profile"
+                tools:src="@drawable/ic_profile"
                 app:layout_constraintBottom_toTopOf="@id/tv_product_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -156,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:text="₺115,19"
+                    tools:text="₺115,19"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/btn_add_to_cart"
