--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -37,6 +37,7 @@
             android:layout_marginEnd="10dp">
 
             <ImageView
+                android:id="@+id/iv_cart"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_alignParentEnd="true"
