--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -32,7 +32,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="40dp"
             android:maxLines="2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_product"
             app:layout_constraintTop_toTopOf="@+id/iv_product"
             tools:text="Coca-Cola" />
@@ -48,34 +50,32 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_product_title"
             tools:text="250 ml" />
 
+
         <TextView
             android:id="@+id/tv_product_price"
             style="@style/textViewRegular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toEndOf="@+id/layout_count"
-            app:layout_constraintTop_toTopOf="@+id/iv_product"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
+            app:layout_constraintVertical_bias="0.0"
             tools:text="₺22.90" />
-
 
         <TextView
             android:id="@+id/tv_product_sale_price"
             style="@style/textViewRegular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:textSize="16sp"
+            android:layout_marginTop="5dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_product_price"
-            app:layout_constraintEnd_toStartOf="@+id/tv_product_price"
-            app:layout_constraintHorizontal_bias="0.912"
-            app:layout_constraintStart_toEndOf="@+id/iv_product"
-            app:layout_constraintTop_toTopOf="@+id/tv_product_price"
-            app:layout_constraintVertical_bias="0.0"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_product_price"
+            app:layout_constraintStart_toStartOf="@+id/tv_product_price"
+            app:layout_constraintTop_toBottomOf="@+id/tv_product_price"
             tools:text="₺22.90" />
 
         <ImageView
@@ -83,6 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_delete"
+            android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.87"
             app:layout_constraintStart_toEndOf="@+id/tv_product_title"
