--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -73,29 +73,29 @@
                 android:layout_width="150dp"
                 android:layout_height="250dp"
                 android:layout_margin="20dp"
-                tools:src="@drawable/ic_profile"
                 app:layout_constraintBottom_toTopOf="@id/tv_product_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.0"
+                tools:src="@drawable/ic_profile" />
 
 
             <RatingBar
                 android:id="@+id/ratingbar"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:rating="3.56"
-                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:layout_marginTop="10dp"
+                android:contentDescription="ratingbar"
                 android:progressTint="@color/yellow"
                 android:secondaryProgressTint="@color/yellow"
-                android:contentDescription="ratingbar"
                 android:stepSize="0.01"
-                android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="@+id/tv_product_title"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/tv_product_title"
-                app:layout_constraintTop_toBottomOf="@+id/iv_product" />
+                app:layout_constraintTop_toBottomOf="@+id/iv_product"
+                tools:rating="3.56" />
 
             <TextView
                 android:id="@+id/tv_product_title"
@@ -157,13 +157,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    tools:text="₺115,19"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/btn_add_to_cart"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="₺115,19" />
 
                 <TextView
                     android:id="@+id/tv_product_sale_price"
